--- a/html/index.html
+++ b/html/index.html
@@ -15,11 +15,23 @@
     Chromium <span id="chrome-version"></span>,
     and Electron <span id="electron-version"></span>.
 
+
+    <!--  Dark mode -->
     <p>Current theme source: <strong id="theme-source">System</strong></p>
     <button id="toggle-dark-mode">Toggle Dark Mode</button>
     <button id="reset-to-system">Reset to System Theme</button>
+    <!-- End dark mode -->
 
+    <hr>
     <a href='preference.html'>Preferences</a>
+
+    <hr>
+    <!-- Bluetooth -->
+    <button id="clickme">Test Bluetooth</button>
+    <button id="cancel">Cancel Bluetooth Request</button>
+
+    <p>Currently selected bluetooth device: <strong id="device-name"></strong></p>
+    <!-- End Bluetooth -->
 
     <!-- You can also require other files to run in this process -->
     <script src="../scripts/renderer.js"></script>
